# libggtl

./: AiTypes.md  CallbackReference.md  ChangeLog  FunctionReference.md  Makefile.am  NimExtention.md  ProjectHome.md  README  ReversiDemo.md  ReversiExtention.md  TicTacTutorial.md  bootstrap.sh  configure.ac  ggtl-nim.c  ggtl-reversi.c  ggtl.c  reversi-demo.c
branches/debian/: configure.ac
branches/debian/examples/: makefile.mk
branches/debian/ggtl/: core.h  ggtl.c  ggtlai.c  nim.c  reversi.c  reversi.h
branches/debian/t/: cache.c  defaults.c
config/: config.h.in
debian/: changelog
examples/: ggtltut.pod  makefile.mk  reversi-demo.pod
ggtl/: core.h  ggtl.c  ggtlai.c  ggtlcb.pod  makefile.mk  nim.c  private.h  reversi.h
t/: 09defaults.c  12sortmoves.c  20nim_ai.c  21nim_trace.t  30reversi_move.t  31reversi_get_moves.c  32reversi_eval.c  33reversi_trace.t  34reversi_iterative.c  Makefile.am  cache.c  ttt.t
t/nim/: basic.c  trace.t
t/reversi/: move.t  time.c
tags/ggtl-1.99.4/: ChangeLog  configure.ac
tags/ggtl-1.99.4/ggtl/: reversi.h
tags/ggtl-1.99.4/t/: 10cache.c  11basic.c  21nim_trace.t  35reversi_time.c
tags/ggtl-1.99.5/: ChangeLog  configure.ac  ggtl.c
tags/ggtl-2.0.0/: ChangeLog  ggtl.c
tags/ggtl-2.0.0/ggtl/: nim.h
tags/ggtl-2.0.0/t/nim/: Makefile.am
tags/ggtl-2.0.0/t/reversi/: Makefile.am
tags/ggtl-2.0.1/: ChangeLog  configure.ac
tags/ggtl-2.0.1/ggtl/: nim.h  reversi.h
tags/ggtl-2.1.0/: ggtl.c
tags/ggtl-2.1.0/t/: cache.c  sortmoves.c
tags/ggtl-2.1.0/t/nim/: ai.c
tags/ggtl-2.1.0/t/reversi/: trace.t
tags/ggtl-2.1.1/: ChangeLog  Makefile.am  README  bootstrap.sh
tags/ggtl-2.1.1/debian/: control  copyright  libggtl-dev.install  libggtl-dev.manpages  libggtl.install  rules
tags/ggtl-2.1.1/examples/: reversi-demo.pod
tags/ggtl-2.1.1/ggtl/: ggtlcb.pod  makefile.mk  nim.h  reversi.c
tags/ggtl-2.1.1/t/: defaults.c
tags/ggtl-2.1.1/t/nim/: basic.c  makefile.mk
tags/ggtl-2.1.1/t/reversi/: get_moves.c  makefile.mk  time.c  trace.t
tags/ggtl-2.1.2/: ChangeLog
tags/ggtl-2.1.2/ggtl/: private.h
tags/ggtl-2.1.3/: ChangeLog
tags/ggtl-2.1.3/ggtl/: core.h  private.h
tags/ggtl-2.1.3/t/: makefile.mk
tags/ggtl-2.1.3/t/nim/: trace.c
tags/ggtl-2.1.3/t/reversi/: iterative.c  move.t  time.c
tags/ggtl-2.2.1/: configure.ac
tags/ggtl-2.2.1/examples/: ggtltut.pod
tags/ggtl-2.2.1/t/: sortmoves.c
tags/ggtl-2.2.1/t/reversi/: move.c
trunk/: ChangeLog  configure.ac
trunk/debian/: changelog
trunk/examples/: ggtltut.pod  ggtltut2.pod  makefile.mk
trunk/ggtl/: core.h  ggtl.c  ggtlai.c  makefile.mk  nim.h  private.h  reversi.c
trunk/t/: defaults.c  makefile.mk  ttt.t
trunk/t/nim/: basic.c
wiki/: AiTypes.wiki  CallbackReference.wiki  FunctionReference.wiki  NimExtention.wiki  ReversiDemo.wiki  ReversiExtention.wiki  TicTacTutorial.wiki
